--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <meta http-equiv="refresh" content="7; url='https://ritsuka.moe'" />
   </head>
   <body>
-    <p>Please follow <a href="https://ritsuka.moe">this link</a>.</p>
+    <p>I have moved. Please follow <a href="https://ritsuka.moe">this link</a>.</p>
   </body>
 </html>
